--- a/.github/workflows/scheduled-task.yml
+++ b/.github/workflows/scheduled-task.yml
@@ -27,8 +27,8 @@ jobs:
 
       - name: Commit and Push Changes
         run: |
-          git config --global user.name "your-github-username"
-          git config --global user.email "your-email@example.com"
+          git config --global user.name imankii01
+          git config --global user.email private.ankit047@gmail.com
           git add .
           git commit -m "Automated commit with random content"
           git push
