--- a/.github/workflows/scheduled-task.yml
+++ b/.github/workflows/scheduled-task.yml
@@ -31,6 +31,6 @@ jobs:
           git config --global user.email "private.ankit047@gmail.com"  # Your GitHub email
           git add .
           git commit -m "Automated commit with random content"
-          git push
+          git push https://imankii01:${{ secrets.GH_TOKEN }}@github.com/imankii01/Personal.git
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}  # Reference to your stored token
