--- a/.github/workflows/scheduled-task.yml
+++ b/.github/workflows/scheduled-task.yml
@@ -27,8 +27,8 @@ jobs:
 
       - name: Commit and Push Changes
         run: |
-          git config --global user.name "imankii01"  # Your GitHub username
-          git config --global user.email "private.ankit047@gmail.com"  # Your GitHub email
+          git config --global user.name imankii01
+          git config --global user.email private.ankit047@gmail.com
           git add .
           git commit -m "Automated commit with random content"
-          git push origin main  # Push without token (using public repo)
+          git push origin main 
